added till prediction

--- a/notebooks/code.ipynb
+++ b/notebooks/code.ipynb
@@ -3159,7 +3159,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#We will apply PCA as there are too many columns, we will select best 10 features who significantly seems different\n",
+    "#We will apply PCA as there are too many columns, we will select best 10 components who significantly seems different\n",
     "\n",
     "from sklearn.decomposition import PCA\n",
     "pca = PCA(n_components=10)\n",
