some changes with prediction pipeline added

--- a/notebooks/code.ipynb
+++ b/notebooks/code.ipynb
@@ -1791,7 +1791,7 @@
     }
    ],
    "source": [
-    "df['veil-color'] = df['veil-color'].replace(['b','o','w','y'],['brown','orange','white','yellow'])\n",
+    "df['veil-color'] = df['veil-color'].replace(['n','o','w','y'],['brown','orange','white','yellow'])\n",
     "df['veil-color']"
    ]
   },
