--- a/notebooks/trainer.ipynb
+++ b/notebooks/trainer.ipynb
@@ -555,7 +555,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "-1.-1.-1"
+   "version": "3.9.0"
   },
   "orig_nbformat": 4
  },
